# weather-cli

./: Cargo.toml  README.md
src/: main.rs  weather.rs
src/weather/: ascii_art.rs  mod.rs
