[package]
name = "weather-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version= "1.0.195", features = ["derive"]}
iso8601 = "0.6.1"
chrono = "0.4.31"

